fix hotspot behaviour on drag triggering action of loading scene when touch end.  Hide author field in css.
Right now on Website and Mobile devices (tested on iOS/iPhone 11 - Safari and Chrome) works click and tap events to trigger load scene action aka got to next room and its blocked on drag  and drop - moving the position of hotspot.

--- a/src/css/pannellum.css
+++ b/src/css/pannellum.css
@@ -174,6 +174,7 @@
   /* Fix Safari fullscreen bug */
   -webkit-transform: translateZ(9999px);
   transform: translateZ(9999px);
+  display: none !important;
 }
 
 .pnlm-title-box {
